--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <button class="calc-button">&equals;</button>
             </div>
         </section>
+        <script src="calculator.js"></script>
     </div>
 </body>
 </html>
